[package]
name = "arbitrum-claim"
version = "1.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.0", features = ["legacy", "abigen"] }
thiserror = "1.0.39"
lazy_static = "1.4.0"
log = "0.4"
url = "2.3.1"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["macros"] }
futures = "0.3.27"
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"